          However, short name is good. Fn->join(',', ["abc", "de"])
        * package keyword is renamed to class. And all of the part of the methods and things which contains "package" is replaced to "class". Sorry
        * Static method concept is changed to Class method
        * Lexical Variable concept is changed to Local Variable for other language users.
        [BUGFIXES]
        * None

0.9011  2021-08-31
        [CHANGES]
        * None
        
        [BUGFIXES]
        * Fix excnahge API any object return value bug

0.9010  2021-08-25
        [CHANGES]
        * improve SPVM::Document::ExchangeAPI
        * add SPVM::Bool module
        * add SPVM::BlessedObject::Array overloding array dereference
        
        [BUGFIXES]
        * None
        
0.9009 2021-06-29
  - Native API get_basic_type_id performance become O(1)
  - Native API get_field_id performance become O(1)
  - Native API get_package_var_id performance become O(1)
  - Native API get_method_id performance become O(1)
  
0.9008 2021-06-28
  - SPVM drop support OpenBSD because I can't fix OpenBSD bugs by myself
    http://matrix.cpantesters.org/?dist=SPVM%200.9006
  - SPVM drop support solaris because I can't fix make error by myself
    http://www.cpantesters.org/cpan/report/6b54513a-c10b-11eb-bc66-57723b537541
  - SPVM support only 64bit System
  - SPVM support only Windows 10+
  - Change The all internal subroutine word is changed to method
  - Change The all word of Subroutine is changed to Method
  - rename Native API call_sub to call_spvm_method
  - rename Native PAI call_sub_by_name to call_spvm_method_by_name
  - rename Native API get_sub_id to get_method_id
  - rename Native API get_sub_id_by_object to get_method_id_by_object
  - rename Native API call_poly_sub_by_name to call_callback_method_by_name
0.9007 2021-06-17
  - fix Mac OS warnings "ld: warning: directory not found for option" in precompile
0.9006 2021-06-11