@@ -14,7 +14,7 @@ SPVM Language Specification.
 
 <ul>
   <li><a href="#language-c99">C99 Compliant</a></li>
-  <li><a href="#language-lex">Lexical Analysis</a></li>
+  <li><a href="#language-token">Tokenizing</a></li>
   <li><a href="#language-parsing">Syntax Parsing</a></li>
   <li><a href="#language-comment">Comment</a></li>
   <li><a href="#language-pod">POD</a></li>
@@ -180,52 +180,52 @@ the following SPVM Types are exactly same as the following C99 Types:
   </tr>
 </table>
 
-<h2 id="language-lex">Lexical Analysis</h2>
+<h2 id="language-token">Tokenizing</h2>
 
-This topic specifies the Lexical Analysis of the SPVM language.
+This topic specifies the Tokenizing of the SPVM language.
 
 <ul>
-  <li><a href="#language-lex-lalr">LALR(1)</a>
-  <li><a href="#language-lex-charset">Character Set</a>
-  <li><a href="#language-lex-component">Component</a>
-  <li><a href="#language-lex-line-terminator">Line Terminater</a>
-  <li><a href="#language-lex-space-character">Space Character</a>
-  <li><a href="#language-lex-identifier">Identifiers</a>
-  <li><a href="#language-lex-separator">Separator</a></li>
-  <li><a href="#language-lex-separator-fat-comma">Fat Comma</a></li>
-  <li><a href="#language-lex-operator">Operator</a>
-  <li><a href="#language-lex-syntax-definition">Syntax Definition</a></li>
+  <li><a href="#language-token-lalr">LALR(1)</a>
+  <li><a href="#language-token-charset">Character Set</a>
+  <li><a href="#language-token-component">Component</a>
+  <li><a href="#language-token-line-terminator">Line Terminater</a>
+  <li><a href="#language-token-space-character">Space Character</a>
+  <li><a href="#language-token-identifier">Identifiers</a>
+  <li><a href="#language-token-separator">Separator</a></li>
+  <li><a href="#language-token-separator-fat-comma">Fat Comma</a></li>
+  <li><a href="#language-token-operator">Operator</a>
+  <li><a href="#language-token-syntax-definition">Syntax Definition</a></li>
 </ul>
 
-<h3 id="language-lex-lalr">LALR(1)</h3><!-- 2019/2/27 almost ok-->
+<h3 id="language-token-lalr">LALR(1)</h3><!-- 2019/2/27 almost ok-->
 
 SPVM language can be analyzed by the LALR(1). It can be parsed by the parser generator generated by yacc/bison.
 
-<h3 id="language-lex-lalr">Character Set</h3>
+<h3 id="language-token-lalr">Character Set</h3>
 
 SPVM programs are written in UTF-8.
 
-<h3 id="language-lex-component">Component</h3><!-- 2019/2/27 almost ok-->
+<h3 id="language-token-component">Component</h3><!-- 2019/2/27 almost ok-->
 
-Component in SPVM is <a href="#language-lex-space-character">Space Character</a>,<a href="#language-comment">Comment</a>, <a href="#language-pod">POD</a>, <a href="#language-literal">Literal</a>, <a href="#language-lex-identifier">Identifier</a>, <a href="#language-lex-keyword">Keyword</a>, <a href="#language-lex-separator">Separator</a>, or <a href="#language-lex-operator">Operator</a>.
+Component in SPVM is <a href="#language-token-space-character">Space Character</a>,<a href="#language-comment">Comment</a>, <a href="#language-pod">POD</a>, <a href="#language-literal">Literal</a>, <a href="#language-token-identifier">Identifier</a>, <a href="#language-token-keyword">Keyword</a>, <a href="#language-token-separator">Separator</a>, or <a href="#language-token-operator">Operator</a>.
 
-<h3 id="language-lex-line-terminator">Line Terminator</h3><!-- 2019/7/1 check-->
+<h3 id="language-token-line-terminator">Line Terminator</h3><!-- 2019/7/1 check-->
 
 Line Terminator in SPVM are ASCII Code "LF", "CR", "CRLF".
 
 When a line terminator appears, the line number is incremented.Line Terminator in a program is converted to ASCII Code "LF".
 
-<h3 id="language-lex-space-character">Space Character</h3><!-- 2019/2/27 almost ok-->
+<h3 id="language-token-space-character">Space Character</h3><!-- 2019/2/27 almost ok-->
 
-Space Character in SPVM is ASCII Code "SP", "HT", "FF" or <a href="#language-lex-line-terminator">Line Terminator</a>.
+Space Character in SPVM is ASCII Code "SP", "HT", "FF" or <a href="#language-token-line-terminator">Line Terminator</a>.
 
 Space Character has no meaning in the program execution.
 
-<h3 id="language-lex-identifier">Identifiers</h3><!-- 2019/2/27 maybe ok-->
+<h3 id="language-token-identifier">Identifiers</h3><!-- 2019/2/27 maybe ok-->
 
-Identifiers in SPVM are <a href="#language-lex-identifier-class-name">Class Name</a>, <a href="#language-lex-identifier-sub-name">Method Name</a>, <a href="#language-lex-identifier-field-name">Field Name</a>, <a href="#language-lex-identifier-class-var-name">Class Variable Name</a>, and <a href="#language-lex-identifier-local-var-name">Local Variable Name</a>.
+Identifiers in SPVM are <a href="#language-token-identifier-class-name">Class Name</a>, <a href="#language-token-identifier-sub-name">Method Name</a>, <a href="#language-token-identifier-field-name">Field Name</a>, <a href="#language-token-identifier-class-var-name">Class Variable Name</a>, and <a href="#language-token-identifier-local-var-name">Local Variable Name</a>.
 
-<h3 id="language-lex-identifier-class-name">Class Name</h3><!-- 2021-02-08 updated -->
+<h3 id="language-token-identifier-class-name">Class Name</h3><!-- 2021-02-08 updated -->
 
 Class Name is one or more alphabet(a-zA-Z), number(0-9), underscore(_) or "::" of ASCII Code.
 
@@ -259,7 +259,7 @@ Foo__Bar
 Foo::bar
 </pre>
 
-<h3 id="language-lex-identifier-sub-name">Method Name</h3><!-- 2019/2/27 almost ok-->
+<h3 id="language-token-identifier-sub-name">Method Name</h3><!-- 2019/2/27 almost ok-->
 
 Method Name is one or more alphabet(a-zA-Z), number(0-9), or underscore(_) of ASCII Code.
 
@@ -280,7 +280,7 @@ _foo_bar_
 foo__bar
 </pre>
 
-<h3 id="language-lex-identifier-field-name">Field Name</h3><!-- 2019/2/27 almost ok-->
+<h3 id="language-token-identifier-field-name">Field Name</h3><!-- 2019/2/27 almost ok-->
 
 Field Name is one or more alphabet(a-zA-Z), number(0-9), or underscore(_) of ASCII Code.
 
@@ -302,7 +302,7 @@ _foo_bar_
 foo__bar
 </pre>
 
-<h3 id="language-lex-identifier-class-var-name">Class Variable Name</h3><!-- 2019/2/27 maybe ok-->
+<h3 id="language-token-identifier-class-var-name">Class Variable Name</h3><!-- 2019/2/27 maybe ok-->
 
 Class Variable Name starts with "$", followed more alphabet(a-zA-Z), number(0-9), underscore(_) or "::" of ASCII Code.
 
@@ -325,7 +325,7 @@ $FOO__BAR
 $3FOO
 </pre>
 
-<h3 id="language-lex-identifier-local-var-name">Local Variable Name</h3><!-- 2019/2/27 maybe ok-->
+<h3 id="language-token-identifier-local-var-name">Local Variable Name</h3><!-- 2019/2/27 maybe ok-->
 
 Local Variable Name starts with "$", followed more alphabet characters of ASCII Code.
 
@@ -345,7 +345,7 @@ $foo__bar
 $3foo
 </pre>
 
-<h3 id="language-lex-keyword">Keywords</h3><!-- 2019/2/27 maybe ok-->
+<h3 id="language-token-keyword">Keywords</h3><!-- 2019/2/27 maybe ok-->
 
 Keywords in SPVM are the followings.
 
@@ -358,7 +358,7 @@ sub string short scalar undef unless use void mulnum_t while
 weaken wo __END__ __CLASS__ __FILE__ __LINE__
 </pre>
 
-<h3 id="language-lex-separator">Separators</h3><!-- 2019/2/27 almost ok-->
+<h3 id="language-token-separator">Separators</h3><!-- 2019/2/27 almost ok-->
 
 Separators in SPVM are the followings.
 
@@ -366,9 +366,9 @@ Separators in SPVM are the followings.
 ( ) { } [ ] ; , ->=>
 </pre>
 
-<h3 id="language-lex-separator-fat-comma">Fat Comma</h3>
+<h3 id="language-token-separator-fat-comma">Fat Comma</h3>
 
-Fat Comma is a <a href="#language-lex-separator">Separator</a> represented by "<b>=></b>".
+Fat Comma is a <a href="#language-token-separator">Separator</a> represented by "<b>=></b>".
 
 <pre>
 =>
@@ -385,7 +385,7 @@ Fat Comma is an alias for Comma "<b>,</b>". Wherever you can use "<b>,</b>" you 
 </pre>
 
 
-Identifiers other than <a href="#language-lex-identifier-class-var-name">Class Variable Name</a> and <a href="#language-lex-identifier-local-var-name">Local Variable Name</a> placed on the Left of Fat Comma are treated as <a href="#language-literal-string">String Literal</a>.
+Identifiers other than <a href="#language-token-identifier-class-var-name">Class Variable Name</a> and <a href="#language-token-identifier-local-var-name">Local Variable Name</a> placed on the Left of Fat Comma are treated as <a href="#language-literal-string">String Literal</a>.
 
 <pre>
 # Identifiers placed on the Left of Fat Comma are treated as String Literal
@@ -393,7 +393,7 @@ Identifiers other than <a href="#language-lex-identifier-class-var-name">Class V
 [a => "b", c => "d"]
 </pre>
 
-<h3 id="language-lex-operator">Operators</h3>
+<h3 id="language-token-operator">Operators</h3>
 
 Operators in SPVM are the followings.
 
@@ -1139,7 +1139,7 @@ The following is a correspondence table between tokens in yacc/bison and keyword
 
 <h2 id="language-comment">Comment</h2>
 
-Comment begins with "#" and ends with <a href="#language-lex-line-terminator">Line Terminator</a>.
+Comment begins with "#" and ends with <a href="#language-token-line-terminator">Line Terminator</a>.
 
 <pre>
 # Comment
@@ -1153,9 +1153,9 @@ POD(Plain Old Document) is a syntax to write documents easily.
 
 You can use POD as Multi-Line comments.
 
-POD starts from the line beginning with "=", followed by any character string of one or more characters, and ending with <a href="#language-lex-line-terminator">Line Terminator</a>.
+POD starts from the line beginning with "=", followed by any character string of one or more characters, and ending with <a href="#language-token-line-terminator">Line Terminator</a>.
 
-POD ends from the line beginning with "=cut", and ending with <a href="#language-lex-line-terminator">Line Terminator</a>.
+POD ends from the line beginning with "=cut", and ending with <a href="#language-token-line-terminator">Line Terminator</a>.
 
 <b>POD Example:</b>
 
@@ -1197,7 +1197,7 @@ class PACAKGE_NAME {
 }
 </pre>
 
-PACAKGE_NAME must follow the rule for <a href="#language-lex-identifier-class-name">Class Name</a>.
+PACAKGE_NAME must follow the rule for <a href="#language-token-identifier-class-name">Class Name</a>.
 
 <a href="#language-class-descriptor">Class Descriptor</a> can be specified by the following syntax.
 
@@ -1534,7 +1534,7 @@ Class Variable must be defined directly under <a href="#language-class-definitio
 
 Class Variable Definition must specify <a href="#language-type">Type</a>. The Type must be <a href="#language-type-numeric">Numeric Type</a> or <a href="#language-type-object">Object Type</a>.
 
-Class Variable Name must follows the rule specified in <a href="#language-lex-identifier-class-var-name">Class Variable Name</a>, and must not contain "::", otherwise Compile Error occurs.
+Class Variable Name must follows the rule specified in <a href="#language-token-identifier-class-var-name">Class Variable Name</a>, and must not contain "::", otherwise Compile Error occurs.
 
 If more than one Class Variable with the same name is defined, Compile Error occurs.
 
@@ -1672,9 +1672,9 @@ Field must be defined directly under <a href="#language-class-definition">Class 
 
 Field Definition must be specify <a href="#language-type">Type</a>. The Type must be <a href="#language-type-numeric">Numeric Type</a> or <a href="#language-type-object">Object Type</a>.
 
-Field Name must follows the rule specified in <a href="#language-lex-identifier-field-name">Field Name</a>.
+Field Name must follows the rule specified in <a href="#language-token-identifier-field-name">Field Name</a>.
 
-Field Name is allowed as same as <a href="#language-lex-keyword">Keyword</a>.
+Field Name is allowed as same as <a href="#language-token-keyword">Keyword</a>.
 
 Field Type must be <a href="#language-type-numeric">Numeric Type</a> or <a href="#language-type-object">Object Type</a>, otherwise Compile Error occurs.
 
@@ -1849,13 +1849,13 @@ sub METHOD_NAME : RETURN_VALUE_TYPE_NAME (ARGUMENT_NAME1 : ARGUMENT_TYPE_NAME1, 
 
 Method must be defined directly under <a href="#language-class-definition">Class Definition</a>.
 
-Method name must be follow the rule of <a href="#language-lex-identifier-sub-name">Method Name</a>.
+Method name must be follow the rule of <a href="#language-token-identifier-sub-name">Method Name</a>.
 
-Method Name is allowed as same as <a href="#language-lex-keyword">Keyword</a>. 
+Method Name is allowed as same as <a href="#language-token-keyword">Keyword</a>. 
 
 Type of Return Value must be <a href="#language-type-void">void Type</a>, <a href="#language-type-numeric">Numeric Type</a>, or <a href="#language-type-object">Object Type</a>, otherwise Compile Error occurs.
 
-Argument name must be follow the rule of <a href="#language-lex-identifier-local-var-name">Local Variable Name</a>.
+Argument name must be follow the rule of <a href="#language-token-identifier-local-var-name">Local Variable Name</a>.
 
 Minimal Argument Count is 0. Max Argument Count is 255.
 
@@ -2249,13 +2249,13 @@ class Foo {
 
 <b>Local Variable</b> is a variable that is declared in <a href="#language-scope-scope-block">Scope Block</a>.  Local Variable has <a href="#language-scope">Scope</a>. This is same as Local Variable in C Language.
 
-Local Variable is declared using <b>my</b> <a href="#language-lex-keyword">Keyword</a>.
+Local Variable is declared using <b>my</b> <a href="#language-token-keyword">Keyword</a>.
 
 <pre>
 my LEXICAL_VARIABLE_NAME : TYPE;
 </pre>
 
-Lexical variable name must be follow the rule of <a href="#language-lex-identifier-local-var-name">Local Variable Name</a>.
+Lexical variable name must be follow the rule of <a href="#language-token-identifier-local-var-name">Local Variable Name</a>.
 
 <a href="#language-type">Type</a> must be specified. Type must be <a href="#language-type-numeric">Numeric Type</a>, <a href="#language-type-object">Object Type</a>, <a href="#language-type-multi-numeric">Multi Numeric Type</a>, or <a href="#language-type-ref">Reference Type</a>.
 
@@ -3766,7 +3766,7 @@ $objects->[2] = Point->new(3, 5);
 my $object = new CLASS_NAME;
 </pre>
 
-<a href="#language-class">Class</a> that is specified by <a href="#language-lex-identifier-class-name">Class Name</a> must be <a href="#language-type-class">Class Type</a>.
+<a href="#language-class">Class</a> that is specified by <a href="#language-token-identifier-class-name">Class Name</a> must be <a href="#language-type-class">Class Type</a>.
 
 Fields of the Object are initialized by <a href="#language-type-initial-value">Type Initial Value</a>.
 
@@ -4040,7 +4040,7 @@ $$z_ref = $z2;
 
 <h3 id="language-expression-current-class">Get Current Class Name</h3>
 
-<b>Get Current Class Name</b> is a Expression to get the current class name by __CLASS__ <a href="#language-lex-keyword">Keyword</a>.
+<b>Get Current Class Name</b> is a Expression to get the current class name by __CLASS__ <a href="#language-token-keyword">Keyword</a>.
 
 <pre>
 __CLASS__
@@ -4060,7 +4060,7 @@ class Foo::Bar {
 
 <h3 id="language-expression-current-class">Get Current File Name</h3>
 
-<b>Get Current File Name</b> is a Expression to get the current file name by __LINE__ <a href="#language-lex-keyword">Keyword</a>.
+<b>Get Current File Name</b> is a Expression to get the current file name by __LINE__ <a href="#language-token-keyword">Keyword</a>.
 
 <pre>
 __FILE__
@@ -4088,7 +4088,7 @@ class Foo::Bar2 {
 
 <h3 id="language-expression-current-class">Get Current Line Number</h3>
 
-<b>Get Current Line Number</b> is a Expression to get the current line number of the current file by __LINE__ <a href="#language-lex-keyword">Keyword</a>.
+<b>Get Current Line Number</b> is a Expression to get the current line number of the current file by __LINE__ <a href="#language-token-keyword">Keyword</a>.
 
 <pre>
 __LINE__
@@ -7714,7 +7714,7 @@ my $comparator = [$foo : int, $bar : long] sub : int ($self : self, $x1 : object
 }
 </pre>
 <p>
-  The variable name used in Capture must be the one with "$" added at the beginning of <a href="#language-lex-identifier-field-name">Field Name</a>.
+  The variable name used in Capture must be the one with "$" added at the beginning of <a href="#language-token-identifier-field-name">Field Name</a>.
 </p>
 <p>
   The Capture is actually defined as a Field of Class. Capture is a field definition and value setting syntax sugar.
