@@ -19,6 +19,8 @@ Revision history for SPVM
         * package keyword is renamed to class. And all of the part of the methods and things which contains "package" is replaced to "class". Sorry
         * Static method concept is changed to Class method
         * Lexical Variable concept is changed to Local Variable for other language users.
+        * Lexical Analysis concept is changed to Tokenizing
+        
         [BUGFIXES]
         * None
 
